refactor(core): address GenerationEngine Sonar nits
- S6885: use Math.clamp(totalChunks, 1, workerThreads) instead of nested
  Math.min/Math.max for activeWorkers.
- S1905: drop redundant (long) cast on chunkSize (start is already long).

No behavior change.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JK7qk2jJXbuSzpMVjNnDUc